kubernetes/apps/ntfy/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ntfy
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: ntfy.png
    gethomepage.dev/href: https://ntfy.${cluster_domain}
    gethomepage.dev/podSelector: app.kubernetes.io/name=ntfy
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.${cluster_domain}`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: ntfy
          port: 80
  tls: {}
